--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>Portfolio</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="app.js"></script>
+    <script src="/app.js"></script>
 </head>
 
 <body>
+    <div id="app">
+        {{ message }}
+    </div>
     <div id="wrapper">
         <ul>
             <li><a class="active" href="#home">Home</a></li>
