--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9f8e32095e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -29,38 +29,56 @@
             <transition name="component-fade" mode="out-in">
                 <component v-bind:is="view"></component>
             </transition>
+
             <!--div class="frame">
-                <h2 class="title">Skills</h2>
-                <div class="grid-container">
-                    <ul class="item-1">
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Javascript</li>
-                        <li>Vue.JS</li>
-                        <li>Adobe Creative Suite</li>
-                        <li>Unity3D</li>
-                        <li>Create.JS</li>
-                        <li>C#</li>
-                        <li>XML</li>
-                    </ul>
-                    <ul class="item-2">
-                        <li>WordPress</li>
-                        <li>Bootstrap</li>
-                        <li>Java</li>
-                        <li>PHP</li>
-                        <li>Git</li>
-                        <li>Gamemaker Studio 2</li>
-                        <li>Server Hosting</li>
-                        <li>SQL</li>
-                        <li>More...</li>
-                    </ul>
+                <div class="grid-project">
+                    <div class="project-title title">
+                        <h3>Project</h3>
+                    </div>
+                    <div class="project-image">
+                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
+                    </div>
+                    <div class="project-description">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, iste iure 
+                            sapiente voluptatibus eum nesciunt debitis nostrum nam molestias 
+                            repellendus perspiciatis ab itaque, pariatur corporis doloribus 
+                            ex soluta ratione distinctio.</p>
+                    </div>
                 </div>
             </div-->
 
-            <!--div class="frame">
-                <h2>Contact</h2>
-                <h3>msissons@confederationcollege.ca</h3>
-                <h3>(807)632-5509</h3>
+            <!--div class="frame"> \
+                <h2 class="title">SKILLS</h2> \
+                <div class="grid-container" id="skills-grid"> \ 
+                    <ul class="item-1"> \
+                        <li>HTML</li> \
+                        <li>CSS</li> \
+                        <li>Javascript</li> \
+                        <li>Vue.JS</li> \
+                        <li>Adobe Creative Suite</li> \
+                        <li>Unity3D</li> \
+                        <li>Create.JS</li> \
+                        <li>C#</li> \ 
+                        <li>XML</li> \
+                    </ul> \
+                    <ul class="item-2"> \
+                        <li>WordPress</li> \
+                        <li>Bootstrap</li> \
+                        <li>Java</li> \ 
+                        <li>PHP</li> \
+                        <li>Git</li> \ 
+                        <li>Gamemaker Studio 2</li> \
+                        <li>Server Hosting</li> \
+                        <li>SQL</li> \
+                        <li>More...</li> \
+                    </ul> \
+                </div> \
+            </div-->
+
+            <!--div class="frame"> \
+                <h2>CONTACT</h2> \
+                <h3>msissons@confederationcollege.ca</h3> \
+                <h3>(807)632-5509</h3> \
             </div-->
 
             <div id="bot-nav">
