New Version Final

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><button @click="turnA">Home</a></li>
                 <li><button @click="turnB">Demo Reel</a></li>
                 <li><button @click="turnC">Skills</a></li>
+                <li><button @click="turnF">Alpha Space</a></li>    
                 <li><button @click="turnD">Contact</a></li>
             </ul>
         </div>
@@ -33,16 +34,15 @@
             <!--div class="frame">
                 <div class="grid-project">
                     <div class="project-title title">
-                        <h3>Project</h3>
+                        <h3>Alpha Space</h3>
                     </div>
                     <div class="project-image">
                         <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
                     </div>
                     <div class="project-description">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, iste iure 
-                            sapiente voluptatibus eum nesciunt debitis nostrum nam molestias 
-                            repellendus perspiciatis ab itaque, pariatur corporis doloribus 
-                            ex soluta ratione distinctio.</p>
+                        <p>A solo project made in Unity, coded in Visual Studio Comunity 2019.</p>
+                        <p>Alpha Space is a game that allows users to build shpace ships and fly them.</p>
+                        <p>The project took 20 hours of work to complete and features Modular and easy to expand code.</p>
                     </div>
                 </div>
             </div-->
